[package]
name = "sheet_functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#CORE
pretty_assertions = "1.3.0"

#WEB
urlencoding = "2.1.2"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
reqwest = { version = "0.11", features = ["blocking"] }